--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-
+<div style="background:#ffd966;color:#000;padding:14px;text-align:center;font-weight:700">
+✅ DEPLOY TEST — If you can see this, the site is serving the latest HTML.
+</div>
