--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-https://fastwealth-landing.netlify.app/?v=9
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Fast Wealth — 2-Minute Audio to Quiet the “Crave Wave”</title>
+  <meta name="description" content="Discover a simple 2-minute audio routine that may help quiet the 'Crave Wave' and align you with abundance. Digital delivery, 180-day guarantee." />
+  <style>
+    body {font-family: Arial, sans-serif; margin:0; padding:0; background:#0f172a; color:#fff;}
+    .container {max-width: 900px; margin: 0 auto; padding: 20px;}
+    h1, h2 {color:#22d3ee;}
+    .cta {display:inline-block; background:#22d3ee; color:#000; padding:12px 20px; margin:10px 0; text-decoration:none; font-weight:bold; border-radius:8px;}
+    .section {margin:40px 0;}
+    footer {margin-top:40px; font-size:12px; color:#ccc;}
+  </style>
+</head>
+<body>
+  <div class="container">
+    <header>
+      <h1>Quiet the “Crave Wave” in Minutes &amp; Invite More Abundance</h1>
+      <p>Simple audio routine: listen for <strong>2 minutes, 4× per week</strong>. Digital access with bonuses and a <strong>180-day money-back guarantee</strong>.</p>
+      <a class="cta" href="https://b5becamd5zgy4yb3elu4hvcr7k.hop.clickbank.net/" target="_blank" rel="nofollow noopener noreferrer">Get Instant Access</a>
+    </header>
+
+    <section class="section">
+      <h2>How It Works</h2>
+      <p>Fast Wealth provides audio frequencies crafted to help quiet the so-called “Crave Wave.” Inspired by noise-cancelling audio, it aims to project a clearer, more aligned state.</p>
+    </section>
+
+    <section class="section">
+      <h2>What Users Report</h2>
+      <ul>
+        <li>Unexpected opportunities and momentum</li>
+        <li>Improved focus and calm</li>
+        <li>Better rest and energy</li>
+      </ul>
+    </section>
+
+    <section class="section">
+      <h2>What You Get Today</h2>
+      <ul>
+        <li>Main Audio: Fast Wealth</li>
+        <li>Bonus #1: Insider Wealth Secrets</li>
+        <li>Bonus #2: 1912 Success Manuscript</li>
+        <li>Bonus #3: FlexBrain Sequence</li>
+        <li>180-Day Guarantee</li>
+      </ul>
+      <a class="cta" href="https://b5becamd5zgy4yb3elu4hvcr7k.hop.clickbank.net/" target="_blank" rel="nofollow noopener noreferrer">Get Access for $39</a>
+    </section>
+
+    <footer>
+      <p><strong>Affiliate Disclosure:</strong> I may earn a commission if you purchase through links on this page, at no additional cost to you.</p>
+      <p>ClickBank is the retailer of products on this site. Their role does not constitute an endorsement, approval, or review of these products.</p>
+    </footer>
+  </div>
+</body>
+</html>
