--- a/index.html
+++ b/index.html
@@ -1,56 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Fast Wealth — 2-Minute Audio to Quiet the “Crave Wave”</title>
-  <meta name="description" content="Discover a simple 2-minute audio routine that may help quiet the 'Crave Wave' and align you with abundance. Digital delivery, 180-day guarantee." />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Fast Wealth — Start Your Journey</title>
+  <meta name="description" content="Discover a simple, beginner-friendly way to start building wealth online. Quick steps. Start today.">
   <style>
-    body {font-family: Arial, sans-serif; margin:0; padding:0; background:#0f172a; color:#fff;}
-    .container {max-width: 900px; margin: 0 auto; padding: 20px;}
-    h1, h2 {color:#22d3ee;}
-    .cta {display:inline-block; background:#22d3ee; color:#000; padding:12px 20px; margin:10px 0; text-decoration:none; font-weight:bold; border-radius:8px;}
-    .section {margin:40px 0;}
-    footer {margin-top:40px; font-size:12px; color:#ccc;}
+    body { margin:0; font-family: Arial, sans-serif; background:#fff; color:#111; text-align:center; }
+    .wrap { max-width:700px; margin:0 auto; padding:60px 20px; }
+    h1 { font-size:28px; margin-bottom:16px; }
+    p { font-size:18px; margin-bottom:24px; line-height:1.5; }
+    a.btn {
+      display:inline-block; background:#007bff; color:#fff;
+      padding:14px 20px; border-radius:6px; font-size:18px; text-decoration:none;
+    }
+    a.btn:hover { background:#0056b3; }
+    footer { margin-top:40px; font-size:12px; opacity:.8; }
+    footer a { color:#111; text-decoration:none; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Quiet the “Crave Wave” in Minutes &amp; Invite More Abundance</h1>
-      <p>Simple audio routine: listen for <strong>2 minutes, 4× per week</strong>. Digital access with bonuses and a <strong>180-day money-back guarantee</strong>.</p>
-      <a class="cta" href="https://b5becamd5zgy4yb3elu4hvcr7k.hop.clickbank.net/" target="_blank" rel="nofollow noopener noreferrer">Get Instant Access</a>
-    </header>
+  <div class="wrap">
+    <h1>Start Your Journey to Financial Freedom</h1>
+    <p>Learn a proven, beginner-friendly method to start building income streams online. 
+       No experience required — just follow the steps.</p>
 
-    <section class="section">
-      <h2>How It Works</h2>
-      <p>Fast Wealth provides audio frequencies crafted to help quiet the so-called “Crave Wave.” Inspired by noise-cancelling audio, it aims to project a clearer, more aligned state.</p>
-    </section>
+    <!-- ✅ Replace ONLY this link with your exact ClickBank hoplink -->
+    <a class="btn" href="https://b5becamd5zgy4yb3elu4hvcr7k.hop.clickbank.net/" rel="noopener">Get Started</a>
 
-    <section class="section">
-      <h2>What Users Report</h2>
-      <ul>
-        <li>Unexpected opportunities and momentum</li>
-        <li>Improved focus and calm</li>
-        <li>Better rest and energy</li>
-      </ul>
-    </section>
-
-    <section class="section">
-      <h2>What You Get Today</h2>
-      <ul>
-        <li>Main Audio: Fast Wealth</li>
-        <li>Bonus #1: Insider Wealth Secrets</li>
-        <li>Bonus #2: 1912 Success Manuscript</li>
-        <li>Bonus #3: FlexBrain Sequence</li>
-        <li>180-Day Guarantee</li>
-      </ul>
-      <a class="cta" href="https://b5becamd5zgy4yb3elu4hvcr7k.hop.clickbank.net/" target="_blank" rel="nofollow noopener noreferrer">Get Access for $39</a>
-    </section>
+    <p style="margin-top:16px;font-size:14px;opacity:.8">
+      Disclaimer: This page contains affiliate links. We may earn a commission if you make a purchase. 
+      Results are not guaranteed and depend on individual effort.
+    </p>
 
     <footer>
-      <p><strong>Affiliate Disclosure:</strong> I may earn a commission if you purchase through links on this page, at no additional cost to you.</p>
-      <p>ClickBank is the retailer of products on this site. Their role does not constitute an endorsement, approval, or review of these products.</p>
+      <p>© 2025 Fast Wealth · <a href="privacy.html">Privacy Policy</a></p>
     </footer>
   </div>
 </body>
