Update2 index.html

--- a/index.html
+++ b/index.html
@@ -1,41 +1,54 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Fast Wealth — Start Your Journey</title>
-  <meta name="description" content="Discover a simple, beginner-friendly way to start building wealth online. Quick steps. Start today.">
-  <style>
-    body { margin:0; font-family: Arial, sans-serif; background:#fff; color:#111; text-align:center; }
-    .wrap { max-width:700px; margin:0 auto; padding:60px 20px; }
-    h1 { font-size:28px; margin-bottom:16px; }
-    p { font-size:18px; margin-bottom:24px; line-height:1.5; }
-    a.btn {
-      display:inline-block; background:#007bff; color:#fff;
-      padding:14px 20px; border-radius:6px; font-size:18px; text-decoration:none;
-    }
-    a.btn:hover { background:#0056b3; }
-    footer { margin-top:40px; font-size:12px; opacity:.8; }
-    footer a { color:#111; text-decoration:none; }
-  </style>
-</head>
-<body>
-  <div class="wrap">
-    <h1>Start Your Journey to Financial Freedom</h1>
-    <p>Learn a proven, beginner-friendly method to start building income streams online. 
-       No experience required — just follow the steps.</p>
+<p class="disclosure"><strong>Affiliate Disclosure:</strong> I may earn a commission if you purchase through my link, at no additional cost to you.</p>
 
-    <!-- ✅ Replace ONLY this link with your exact ClickBank hoplink -->
-    <a class="btn" href="https://b5becamd5zgy4yb3elu4hvcr7k.hop.clickbank.net/" rel="noopener">Get Started</a>
+<div class="divider" role="presentation"></div>
 
-    <p style="margin-top:16px;font-size:14px;opacity:.8">
-      Disclaimer: This page contains affiliate links. We may earn a commission if you make a purchase. 
-      Results are not guaranteed and depend on individual effort.
-    </p>
+<!-- Privacy kept on the same page, collapsed by default to minimize distraction -->
+<details class="policy" aria-label="Privacy policy">
+  <summary>Privacy Policy (click to expand)</summary>
+  <div class="content">
+    <p class="tiny">Effective date: <strong>August 26, 2025</strong></p>
 
-    <footer>
-      <p>© 2025 Fast Wealth · <a href="privacy.html">Privacy Policy</a></p>
-    </footer>
+    <h3>1) Information We Collect</h3>
+    <ul>
+      <li><strong>Cookies</strong> and similar technologies (including identifiers used to remember preferences and measure ads).</li>
+      <li><strong>IP address</strong>, approximate location, device/browser type, operating system, and referring URL.</li>
+      <li><strong>Device identifiers</strong> and advertising IDs (where available) for analytics and remarketing.</li>
+      <li><strong>On-site interactions</strong> such as pages viewed, buttons clicked, and time on page.</li>
+    </ul>
+
+    <h3>2) Analytics &amp; Remarketing</h3>
+    <ul>
+      <li><strong>Analytics:</strong> Tools may set/read cookies or identifiers to provide aggregated usage and performance stats (e.g., page views, conversions).</li>
+      <li><strong>Remarketing:</strong> Ad partners may use cookies/device IDs to show relevant ads based on your activity on this site.</li>
+    </ul>
+
+    <h3>3) Learn More — Google Policies</h3>
+    <ul>
+      <li><a href="https://policies.google.com/technologies/ads" rel="noopener nofollow">About Google Ads &amp; Technologies</a></li>
+      <li><a href="https://support.google.com/google-ads/answer/2549063" rel="noopener nofollow">Personalized ads &amp; data</a></li>
+      <li><a href="https://policies.google.com/privacy" rel="noopener nofollow">Google Privacy Policy</a></li>
+      <li><a href="https://support.google.com/analytics/answer/6004245" rel="noopener nofollow">Google Analytics — Safeguarding Your Data</a></li>
+      <li><a href="https://marketingplatform.google.com/about/analytics/terms/us/" rel="noopener nofollow">Google Analytics Terms of Service</a></li>
+    </ul>
+
+    <h3>4) Opt-Out Choices</h3>
+    <ul>
+      <li><a href="https://adssettings.google.com/authenticated" rel="noopener nofollow">Google Ads Settings</a> (control personalized ads).</li>
+      <li><a href="https://optout.networkadvertising.org/" rel="noopener nofollow">NAI Consumer Opt-Out</a> (interest-based ads).</li>
+      <li><a href="https://www.aboutads.info/choices/" rel="noopener nofollow">YourAdChoices (DAA)</a> (US ad choices).</li>
+      <li><a href="https://tools.google.com/dlpage/gaoptout" rel="noopener nofollow">Google Analytics Opt-Out Add-On</a>.</li>
+      <li>You can also clear or block cookies via your browser settings.</li>
+    </ul>
+
+    <h3>5) Contact</h3>
+    <ul>
+      <li>Email: <a href="mailto:CONTACT_EMAIL">CONTACT_EMAIL</a></li>
+      <li>Business name: <span>BUSINESS_NAME</span></li>
+      <li>Mailing address (optional): <span>POSTAL_ADDRESS</span></li>
+    </ul>
+
+    <p class="tiny">Retailer and product names mentioned may be trademarks of their respective owners.</p>
   </div>
-</body>
-</html>
+</details>
+
+<p class="footer-note">All content on one page. Privacy is available on demand above to keep the focus on the call-to-action.</p>
