--- a/index.html
+++ b/index.html
@@ -1,54 +1,148 @@
-<p class="disclosure"><strong>Affiliate Disclosure:</strong> I may earn a commission if you purchase through my link, at no additional cost to you.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <title>Fast Wealth — “Crave Wave” Audio | Instant Access</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Single-page affiliate landing: Fast Wealth audio designed to help quiet the 'Crave Wave'. Listen 2 minutes four times weekly. $39 with 180-day guarantee. Bonuses included." />
+  <style>
+    :root {
+      --bg: #0f1115;
+      --card: #151822;
+      --text: #f5f7ff;
+      --muted: #b8bfd8;
+      --accent: #5f85ff;
+      --accent-2: #64e0b6;
+      --border: #23283b;
+      --maxw: 860px;
+    }
+    * { box-sizing: border-box; }
+    html, body { margin:0; padding:0; }
+    body {
+      background: var(--bg);
+      color: var(--text);
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Inter, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji", sans-serif;
+      line-height: 1.55;
+    }
+    a { color: var(--accent); text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    .wrap { max-width: var(--maxw); margin: 0 auto; padding: 20px; }
+    .hero { text-align: center; padding: 36px 16px 12px; }
+    .badge {
+      display: inline-block;
+      padding: 6px 10px;
+      border: 1px solid var(--border);
+      border-radius: 999px;
+      color: var(--muted);
+      font-size: 12px;
+      margin-bottom: 10px;
+      background: rgba(255,255,255,0.02);
+    }
+    h1 { font-size: clamp(26px, 4vw, 40px); margin: 8px 0; line-height: 1.15; }
+    .sub { color: var(--muted); font-size: clamp(14px, 2.2vw, 18px); max-width: 720px; margin: 8px auto 0; }
+    .card { background: var(--card); border: 1px solid var(--border); border-radius: 14px; padding: 18px; margin: 18px auto; }
+    .bullets { list-style: none; padding: 0; margin: 0; display: grid; gap: 10px; }
+    .bullets li { display: grid; grid-template-columns: 22px 1fr; gap: 10px; align-items: start; padding: 10px 12px; border: 1px solid var(--border); border-radius: 10px; background: rgba(255,255,255,0.02); }
+    .bullets .dot { color: var(--accent-2); font-size: 22px; line-height: 1; margin-top: 2px; }
+    .cta { text-align: center; margin: 18px auto 10px; }
+    .btn {
+      display: inline-block;
+      padding: 14px 22px;
+      border-radius: 12px;
+      border: 1px solid transparent;
+      background: linear-gradient(180deg, var(--accent), #3c63ff);
+      color: #fff;
+      font-weight: 700;
+      font-size: 16px;
+    }
+    .btn:hover { filter: brightness(1.06); }
+    .subtext { color: var(--muted); font-size: 13px; margin-top: 6px; text-align: center; }
+    .disclosure { color: var(--muted); font-size: 12px; text-align: center; margin: 12px auto 26px; }
+    .divider { height: 1px; background: var(--border); margin: 24px 0; }
+    details.policy { border: 1px solid var(--border); border-radius: 10px; background: rgba(255,255,255,0.02); }
+    details.policy > summary { padding: 12px 14px; cursor: pointer; font-weight: 700; }
+    details.policy .content { padding: 0 14px 14px; color: #e7ebff; }
+    details.policy h3 { margin: 12px 0 6px; font-size: 16px; color: var(--muted); }
+    details.policy ul { margin: 6px 0 12px 18px; }
+    .tiny { font-size: 12px; color: var(--muted); }
+    .footer-note { text-align: center; margin: 18px 0 36px; color: var(--muted); font-size: 12px; }
+  </style>
+</head>
+<body>
+  <header class="hero wrap">
+    <span class="badge">Digital Audio • Instant Access • 180-Day Guarantee</span>
+    <h1>Fast Wealth: Audio to “Quiet the Crave Wave”</h1>
+    <p class="sub">Digital audio designed to help quiet the “Crave Wave.” Listen <strong>2 minutes, four times per week</strong>. Includes bonuses. <strong>$39</strong> with a <strong>180-day money-back guarantee</strong>.</p>
+  </header>
 
-<div class="divider" role="presentation"></div>
+  <main class="wrap">
+    <section class="card">
+      <ul class="bullets">
+        <li><span class="dot">•</span><span>Addresses “Crave Wave” activity in the thalamus to align with abundance.</span></li>
+        <li><span class="dot">•</span><span>Listen for <strong>2 minutes, 4×/week</strong>; no affirmations or rituals needed.</span></li>
+        <li><span class="dot">•</span><span><strong>Digital download</strong> — instant access. Price: <strong>$39</strong>.</span></li>
+        <li><span class="dot">•</span><span><strong>Includes 3 bonuses:</strong> Insider Wealth Secrets, 1912 success manuscript, FlexBrain Sequence (3 tracks).</span></li>
+        <li><span class="dot">•</span><span><strong>180-day money-back guarantee</strong> from retailer.</span></li>
+      </ul>
+      <div class="cta">
+        <a class="btn" href="https://b5becamd5zgy4yb3elu4hvcr7k.hop.clickbank.net/" rel="nofollow noopener">Get Instant Access — $39</a>
+        <div class="subtext">Digitally delivered product. Secure checkout via retailer.</div>
+      </div>
+    </section>
 
-<!-- Privacy kept on the same page, collapsed by default to minimize distraction -->
-<details class="policy" aria-label="Privacy policy">
-  <summary>Privacy Policy (click to expand)</summary>
-  <div class="content">
-    <p class="tiny">Effective date: <strong>August 26, 2025</strong></p>
+    <p class="disclosure"><strong>Affiliate Disclosure:</strong> I may earn a commission if you purchase through my link, at no additional cost to you.</p>
 
-    <h3>1) Information We Collect</h3>
-    <ul>
-      <li><strong>Cookies</strong> and similar technologies (including identifiers used to remember preferences and measure ads).</li>
-      <li><strong>IP address</strong>, approximate location, device/browser type, operating system, and referring URL.</li>
-      <li><strong>Device identifiers</strong> and advertising IDs (where available) for analytics and remarketing.</li>
-      <li><strong>On-site interactions</strong> such as pages viewed, buttons clicked, and time on page.</li>
-    </ul>
+    <div class="divider"></div>
 
-    <h3>2) Analytics &amp; Remarketing</h3>
-    <ul>
-      <li><strong>Analytics:</strong> Tools may set/read cookies or identifiers to provide aggregated usage and performance stats (e.g., page views, conversions).</li>
-      <li><strong>Remarketing:</strong> Ad partners may use cookies/device IDs to show relevant ads based on your activity on this site.</li>
-    </ul>
+    <details class="policy">
+      <summary>Privacy Policy (click to expand)</summary>
+      <div class="content">
+        <p class="tiny">Effective date: <strong>August 26, 2025</strong></p>
 
-    <h3>3) Learn More — Google Policies</h3>
-    <ul>
-      <li><a href="https://policies.google.com/technologies/ads" rel="noopener nofollow">About Google Ads &amp; Technologies</a></li>
-      <li><a href="https://support.google.com/google-ads/answer/2549063" rel="noopener nofollow">Personalized ads &amp; data</a></li>
-      <li><a href="https://policies.google.com/privacy" rel="noopener nofollow">Google Privacy Policy</a></li>
-      <li><a href="https://support.google.com/analytics/answer/6004245" rel="noopener nofollow">Google Analytics — Safeguarding Your Data</a></li>
-      <li><a href="https://marketingplatform.google.com/about/analytics/terms/us/" rel="noopener nofollow">Google Analytics Terms of Service</a></li>
-    </ul>
+        <h3>1) Information We Collect</h3>
+        <ul>
+          <li>Cookies and similar technologies (preferences, ads measurement).</li>
+          <li>IP address, location, device/browser info, referrer.</li>
+          <li>Device IDs and advertising IDs for analytics/remarketing.</li>
+          <li>On-site interactions such as pages viewed and clicks.</li>
+        </ul>
 
-    <h3>4) Opt-Out Choices</h3>
-    <ul>
-      <li><a href="https://adssettings.google.com/authenticated" rel="noopener nofollow">Google Ads Settings</a> (control personalized ads).</li>
-      <li><a href="https://optout.networkadvertising.org/" rel="noopener nofollow">NAI Consumer Opt-Out</a> (interest-based ads).</li>
-      <li><a href="https://www.aboutads.info/choices/" rel="noopener nofollow">YourAdChoices (DAA)</a> (US ad choices).</li>
-      <li><a href="https://tools.google.com/dlpage/gaoptout" rel="noopener nofollow">Google Analytics Opt-Out Add-On</a>.</li>
-      <li>You can also clear or block cookies via your browser settings.</li>
-    </ul>
+        <h3>2) Analytics &amp; Remarketing</h3>
+        <ul>
+          <li><strong>Analytics:</strong> cookies and IDs to measure site usage and conversions.</li>
+          <li><strong>Remarketing:</strong> ad partners may show relevant ads based on site visits.</li>
+        </ul>
 
-    <h3>5) Contact</h3>
-    <ul>
-      <li>Email: <a href="mailto:CONTACT_EMAIL">CONTACT_EMAIL</a></li>
-      <li>Business name: <span>BUSINESS_NAME</span></li>
-      <li>Mailing address (optional): <span>POSTAL_ADDRESS</span></li>
-    </ul>
+        <h3>3) Google Policies</h3>
+        <ul>
+          <li><a href="https://policies.google.com/technologies/ads">About Google Ads</a></li>
+          <li><a href="https://support.google.com/google-ads/answer/2549063">Personalized ads &amp; data</a></li>
+          <li><a href="https://policies.google.com/privacy">Google Privacy Policy</a></li>
+          <li><a href="https://support.google.com/analytics/answer/6004245">Google Analytics Data</a></li>
+          <li><a href="https://marketingplatform.google.com/about/analytics/terms/us/">Analytics Terms</a></li>
+        </ul>
 
-    <p class="tiny">Retailer and product names mentioned may be trademarks of their respective owners.</p>
-  </div>
-</details>
+        <h3>4) Opt-Out Choices</h3>
+        <ul>
+          <li><a href="https://adssettings.google.com/authenticated">Google Ads Settings</a></li>
+          <li><a href="https://optout.networkadvertising.org/">NAI Consumer Opt-Out</a></li>
+          <li><a href="https://www.aboutads.info/choices/">YourAdChoices (DAA)</a></li>
+          <li><a href="https://tools.google.com/dlpage/gaoptout">Google Analytics Opt-Out Add-On</a></li>
+          <li>You may also clear or block cookies in your browser.</li>
+        </ul>
 
-<p class="footer-note">All content on one page. Privacy is available on demand above to keep the focus on the call-to-action.</p>
+        <h3>5) Contact</h3>
+        <ul>
+          <li>Email: <a href="mailto:info@example.com">info@example.com</a></li>
+          <li>Business name: Example Affiliate Marketing</li>
+          <li>Address: 123 Main St, Anytown, USA</li>
+        </ul>
+
+        <p class="tiny">Retailer and product names may be trademarks of their respective owners.</p>
+      </div>
+    </details>
+
+    <p class="footer-note">All content on one page. Privacy policy is collapsed by default to keep focus on the call-to-action.</p>
+  </main>
+</body>
+</html>
